raw weather data converted

--- a/wwwsrc/public/index.html
+++ b/wwwsrc/public/index.html
@@ -17,6 +17,7 @@
   </noscript>
   <div id="app"></div>
   <!-- built files will be auto injected -->
+  <script type="text/javascript" src="https://widgets-viewer.climacell.co/v1/sdk.js"></script>
 </body>
 
 </html>
