--- a/wwwsrc/public/index.html
+++ b/wwwsrc/public/index.html
@@ -8,14 +8,13 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
   <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>Re-Inspire</title>
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
+    <strong>We're sorry but wwwsrc doesn't work properly without JavaScript enabled.
       Please enable it to continue.</strong>
   </noscript>
   <div id="app"></div>
